Final Spring Boot Application

--- a/BikesStoreApplication_last/src/main/resources/application.properties
+++ b/BikesStoreApplication_last/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/classicmodels?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
-spring.datasource.username = root
-spring.datasource.password = root
-
+#spring.datasource.url = jdbc:mysql://localhost:3306/classicmodels?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
+spring.datasource.url=jdbc:mysql://classicmodels.c6cmdp3dzacz.us-east-1.rds.amazonaws.com/classicmodels
+spring.datasource.username=root
+spring.datasource.password=Vishusari58
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ## Hibernate Properties
 
