--- a/BikesStoreApplication_last/pom.xml
+++ b/BikesStoreApplication_last/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>BikesStoreApplication</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 
 	<name>BikesStoreApplication</name>
 	<description>Sample Ecommerce Boot Application</description>
